# market_system

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  report.txt
.github/workflows/: ci.yml
src/market_system/: __init__.py  cli.py
src/market_system/alignment/: __init__.py  aligner.py
src/market_system/core/: __init__.py
src/market_system/execution/: __init__.py  sierra_adapter.py
src/market_system/ingestion/: __init__.py  reader.py
src/market_system/realtime/: __init__.py  stream.py
src/market_system/storage/: __init__.py  schema.py  writer.py
src/market_system/viewer/: __init__.py  app.py  server.py
tests/: test_ingestion.py  test_storage.py
