[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-system"
version = "0.0.1"
description = ""
authors = [{ name = "Andy" }]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pre-commit"
]
viewer = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13"
]

[project.scripts]
market-system = "market_system.cli:main"
